release 1.1.2-ea (2009-09)
- Fixed issue 326
  https://jersey.dev.java.net/issues/show_bug.cgi?id=326
  Work around bug 5087240 in the JDK:
  http://bugs.sun.com/view_bug.do?bug_id=5087240
- Fixed issue 330
  https://jersey.dev.java.net/issues/show_bug.cgi?id=330
  ContainerRequest and ContainerResponse by may now be adapted from within
  filters by extending AdaptingContainerRequest and AdaptingContainerResponse
  respectively. The adapter CachedEntityContainerRequest is available for when
  a request entity instance consumed by a filter needs to be cached.
- The oauth modules at the java.net maven repository have moved from
  jersey/oauth to jersey/contribs/jersey-oauth/.

release 1.1.1-ea (2009-07-13)
- Fixed issue 322
  https://jersey.dev.java.net/issues/show_bug.cgi?id=323
  A proxied IoC provider should not be invoked if the component to be proxied
  cannot be instantiated.
- Fixed issue 323
  https://jersey.dev.java.net/issues/show_bug.cgi?id=323
  By default entity processing is disabled when XML parsing, on the client and
  server side, for JAXB types, SAXSource and DOMSource.
  This prevents Xml eXternal Entity (XXE) attacks. Security defaults for XML
  processing may be disabled by setting the feature 
  FeaturesAndProperties.FEATURE_DISABLE_XML_SECURITY to true.
- Fixed issue 310
  https://jersey.dev.java.net/issues/show_bug.cgi?id=310
  Single element array in mapped JSON notation is incorrect
- Fixed issue 305
  https://jersey.dev.java.net/issues/show_bug.cgi?id=305
  JSON Natural Notation can not correctly marshall unbounded "any" wildcard
- Fixed issue 294
  https://jersey.dev.java.net/issues/show_bug.cgi?id=294
  Empty JSON elements break deserialization
- Fixed issue 272
  https://jersey.dev.java.net/issues/show_bug.cgi?id=272
  JSONUnmarshaller cannot unmarshal nested array element
- Fixed issue 113
  https://jersey.dev.java.net/issues/show_bug.cgi?id=113
  Namespace support for mapped and natural JSON notations