@@ -17,6 +17,7 @@ com.sun.jersey.core.impl.provider.entity.XMLListElementProvider$App
 com.sun.jersey.core.impl.provider.entity.XMLListElementProvider$Text
 com.sun.jersey.core.impl.provider.entity.XMLListElementProvider$General
 com.sun.jersey.core.impl.provider.entity.ReaderProvider
+com.sun.jersey.core.impl.provider.entity.DocumentProvider
 com.sun.jersey.core.impl.provider.entity.SourceProvider$StreamSourceReader
 com.sun.jersey.core.impl.provider.entity.SourceProvider$SAXSourceReader
 com.sun.jersey.core.impl.provider.entity.SourceProvider$DOMSourceReader
